feat: implemented damages and small fixes